# GenLayer-ABI-Generator

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  README.md  package.json  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: main.py
genlayer_abi/: __init__.py  __main__.py  cli.py  generator.py  parser.py
static/: index.html
tests/: test_parser.py
tests/contracts/: complex.py  sample.py
vscode-extension/: extension.js  package.json
